# la-mulana-multiworld

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  example.yaml  lamulana-config.toml  todo.md
archipelago-api/: cargo.toml
archipelago-api/src/: api.rs  client.rs
launcher/: Cargo.toml  build.rs
launcher/src/: ap_connection.rs  ap_data.rs  consts.rs  file_utils.rs  launcher.slint  main.rs  verifier.rs
launcher/src/archipelago/: api.rs  client.rs
launcher/src/file_gen/: app_config.rs  dat.rs  generator.rs  graphics.rs  lm_consts.rs  lm_flags.rs  mod.rs  rcd.rs  sav.rs
patch/: LaMulanaMultiworld.bps
src/: application.rs  hitbox.rs  lib.rs  network.rs  screenplay.rs  taskdata.rs  test.txt  utils.rs
src/application/: entrypoints.rs  live.rs  memory.rs  mod.rs
src/archipelago/: api.rs  client.rs  protocol.rs
src/lm_structs/: items.rs  map_struct.rs  mod.rs  rcd_flag_op.rs  rcd_object.rs  roomcache.rs  script_header.rs  taskdata.rs
src/structs/: taskdata.rs
