[package]
name = "LaMulanaMW"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
archipelago_rs = { git = "https://github.com/ryanisaacg/archipelago_rs.git", rev = "4918e0528c4db77f86675657fb0ee8073008ac39" }
lazy_static = "1.4.0"
log = "0.4.16"
log4rs = { "version" ="1.0.0", "features" = ["file_appender"] }
pelite = "0.10.0"
phf = { version = "0.13.1", features = ["macros"], default-features = false }
retour = { version = "0.4.0-alpha.4", features = ["static-detour"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0"
toml = "0.5.9"
tungstenite = "0.28.0"
winapi = { "version" = "0.3.9", "features" = ["ntdef", "minwindef", "winnt", "libloaderapi", "winuser", "processthreadsapi", "timeapi"] }

[profile.release]
opt-level = "z"
lto = true
