[package]
name = "LaMulanaMW"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
archipelago-api = { path = "./archipelago-api" }
log = "0.4.16"
log4rs = { "version" = "1.0.0", "features" = ["file_appender"] }
pelite = "0.10.0"
retour = { version = "0.4.0-alpha.4", features = ["static-detour"] }
serde = { version = "1.0", features = ["derive"]}
tokio = { "version" = "1.48.0", "features" = ["rt-multi-thread"] }
toml = "0.5.9"
winapi = { "version" = "0.3.9", "features" = ["libloaderapi", "minwindef", "ntdef", "processthreadsapi", "timeapi", "winnt", "winuser"] }
windows = { "version" = "0.62.2", "features" = ["Win32", "Win32_System", "Win32_Foundation", "Win32_System_SystemServices", "Win32_System_Memory"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
