[package]
name = "la-mulana-multiworld-launch"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.11.0"
dll-syringe = { version = "0.17.1", features = ["into-x86-from-x64"] }
log = "0.4.16"
log4rs = { "version" = "1.0.0", "features" = ["file_appender"] }
ratchet_rs = { version = "1.2.1", features = ["deflate"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_repr = "0.1"
slint = "1.14.1"
thiserror = "1.0"
tokio = { "version" = "1.48.0", "features" = ["macros", "rt-multi-thread"] }
tokio-native-tls = "0.3.1"

[build-dependencies]
slint-build = "1.14.1"

[profile.release]
opt-level = "z"
