[package]
name = "la-mulana-multiworld-launch"
version = "0.1.0"
edition = "2021"

[dependencies]
binrw = "0.15.0"
bytes = "1.11.0"
dirs-next = "2.0.0"
dll-syringe = { version = "0.17.1", features = ["into-x86-from-x64"] }
hex = "0.4.3"
image = "0.25.9"
log = "0.4.16"
log4rs = { "version" = "1.0.0", "features" = ["file_appender"] }
modular-bitfield = "0.13.1"
ratchet_rs = { version = "1.2.1", features = ["deflate"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_repr = "0.1"
sha2 = "0.10.9"
slint = "1.14.1"
sysinfo = "0.37.2"
thiserror = "1.0"
tokio = { "version" = "1.48.0", "features" = ["macros", "rt-multi-thread"] }
tokio-native-tls = "0.3.1"
toml = "0.5.9"
unicode-segmentation = "1.12.0"

[build-dependencies]
slint-build = "1.14.1"

[profile.release]
opt-level = "z"
